--- a/movie-details.html
+++ b/movie-details.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="lib/fontawesome.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
@@ -39,52 +38,7 @@
         <a class="btn" href="index.html">Back To Movies</a>
       </div>
       <!-- Movie Details Output -->
-      <div id="movie-details">
-        <div class="details-top">
-          <div>
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Movie Title"
-            />
-          </div>
-          <div>
-            <h2>Movie Title</h2>
-            <p>
-              <i class="fas fa-star text-primary"></i>
-              8 / 10
-            </p>
-            <p class="text-muted">Release Date: XX/XX/XXXX</p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-              atque molestiae error debitis provident dolore hic odit, impedit
-              sint, voluptatum consectetur assumenda expedita perferendis
-              obcaecati veritatis voluptatibus. Voluptatum repellat suscipit,
-              quae molestiae cupiditate modi libero dolorem commodi obcaecati!
-              Ratione quia corporis recusandae delectus perspiciatis consequatur
-              ipsam. Cumque omnis ad recusandae.
-            </p>
-            <h5>Genres</h5>
-            <ul class="list-group">
-              <li>Genre 1</li>
-              <li>Genre 2</li>
-              <li>Genre 3</li>
-            </ul>
-            <a href="#" target="_blank" class="btn">Visit Movie Homepage</a>
-          </div>
-        </div>
-        <div class="details-bottom">
-          <h2>Movie Info</h2>
-          <ul>
-            <li><span class="text-secondary">Budget:</span> $1,000,000</li>
-            <li><span class="text-secondary">Revenue:</span> $2,000,000</li>
-            <li><span class="text-secondary">Runtime:</span> 90 minutes</li>
-            <li><span class="text-secondary">Status:</span> Released</li>
-          </ul>
-          <h4>Production Companies</h4>
-          <div class="list-group">Company 1, Company 2, Company 3</div>
-        </div>
-      </div>
+      <div id="movie-details"></div>
     </section>
 
     <!-- Footer -->
