--- a/search.html
+++ b/search.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="lib/fontawesome.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
@@ -49,8 +48,7 @@
               type="text"
               name="search-term"
               id="search-term"
-              placeholder="Enter search term"
-            />
+              placeholder="Enter search term" />
             <button class="btn" type="submit">
               <i class="fas fa-search"></i>
             </button>
@@ -62,103 +60,8 @@
     <!-- Search Results -->
     <section id="search-results-wrapper" class="container">
       <heading id="search-results-heading"></heading>
-      <div id="search-results" class="grid">
-        <div class="card">
-          <a href="#">
-            <img src="images/no-image.jpg" class="card-img-top" alt="" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Movie Or Show Name</h5>
-            <p class="card-text">
-              <small class="text-muted">Release: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="images/no-image.jpg" class="card-img-top" alt="" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Movie Or Show Name</h5>
-            <p class="card-text">
-              <small class="text-muted">Release: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="images/no-image.jpg" class="card-img-top" alt="" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Movie Or Show Name</h5>
-            <p class="card-text">
-              <small class="text-muted">Release: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="images/no-image.jpg" class="card-img-top" alt="" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Movie Or Show Name</h5>
-            <p class="card-text">
-              <small class="text-muted">Release: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="images/no-image.jpg" class="card-img-top" alt="" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Movie Or Show Name</h5>
-            <p class="card-text">
-              <small class="text-muted">Release: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="images/no-image.jpg" class="card-img-top" alt="" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Movie Or Show Name</h5>
-            <p class="card-text">
-              <small class="text-muted">Release: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="images/no-image.jpg" class="card-img-top" alt="" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Movie Or Show Name</h5>
-            <p class="card-text">
-              <small class="text-muted">Release: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="#">
-            <img src="images/no-image.jpg" class="card-img-top" alt="" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Movie Or Show Name</h5>
-            <p class="card-text">
-              <small class="text-muted">Release: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div id="pagination">
-        <div class="pagination">
-          <button class="btn btn-primary" id="prev">Prev</button>
-          <button class="btn btn-primary" id="next">Next</button>
-          <div class="page-counter">Page 1 of 5</div>
-        </div>
-      </div>
+      <div id="search-results" class="grid"></div>
+      <div id="pagination"></div>
     </section>
 
     <!-- Footer -->
