--- a/shows.html
+++ b/shows.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="lib/fontawesome.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
@@ -36,128 +35,7 @@
     <!-- Popular TV Shows -->
     <section class="container">
       <h2>Popular TV Shows</h2>
-      <div id="popular-shows" class="grid">
-        <div class="card">
-          <a href="tv-details.html?id=1">
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Show Title"
-            />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Show Title</h5>
-            <p class="card-text">
-              <small class="text-muted">Aired: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="tv-details.html?id=1">
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Show Title"
-            />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Show Title</h5>
-            <p class="card-text">
-              <small class="text-muted">Aired: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="tv-details.html?id=1">
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Show Title"
-            />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Show Title</h5>
-            <p class="card-text">
-              <small class="text-muted">Aired: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="tv-details.html?id=1">
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Show Title"
-            />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Show Title</h5>
-            <p class="card-text">
-              <small class="text-muted">Aired: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="tv-details.html?id=1">
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Show Title"
-            />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Show Title</h5>
-            <p class="card-text">
-              <small class="text-muted">Aired: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="tv-details.html?id=1">
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Show Title"
-            />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Show Title</h5>
-            <p class="card-text">
-              <small class="text-muted">Aired: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="tv-details.html?id=1">
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Show Title"
-            />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Show Title</h5>
-            <p class="card-text">
-              <small class="text-muted">Aired: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <a href="tv-details.html?id=1">
-            <img
-              src="images/no-image.jpg"
-              class="card-img-top"
-              alt="Show Title"
-            />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Show Title</h5>
-            <p class="card-text">
-              <small class="text-muted">Aired: XX/XX/XXXX</small>
-            </p>
-          </div>
-        </div>
-      </div>
+      <div id="popular-shows" class="grid"></div>
     </section>
 
     <!-- Footer -->
